--- a/app/views/return-journey/b2match-email.html
+++ b/app/views/return-journey/b2match-email.html
@@ -971,8 +971,8 @@
 				<p>This means that you are now visible to attending buyers and can start using b2match to:</p>
 
 				<ul>
-					<li><a href="https://tradeshow.b2match.io/participants#/">request and book meetings</a>: simply use the 'Request meeting' button displayed on the profiles of available buyers </li>
-					<li><a href="https://tradeshow.b2match.io/my#/">edit your attendee profile</a>: including the ability to add products or services and edit your availability schedule</li>
+					<li><a href="/return-journey/signin-b2match-buyers">request and book meetings</a>: simply use the 'Request meeting' button displayed on the profiles of available buyers </li>
+					<li><a href="/return-journey/signin-b2match-profile">edit your attendee profile</a>: including the ability to add products or services and edit your availability schedule</li>
 				</ul>
 
 				<p>If you want to manage your general registration for this event, visit
