--- a/app/views/return-journey/great-get-started.html
+++ b/app/views/return-journey/great-get-started.html
@@ -1015,269 +1015,53 @@
         </div>
     </div>
 
-    <section class="hero-campaign-section">
+
+    <section class="questions ">
         <div class="container">
-            <div class="hero-campaign-teaser">
-                <h1 class="title"><span>If we can,</span><br><span>you can</span></h1>
-                <p>Thousands of businesses like yours have increased their sales, growth and stability by selling overseas. Explore the potential of exporting with guidance, services and support from the Department for International Trade.</p>
-                <img src="/public/images/eig-logo-stacked.36e549017257.png" alt="">
-            </div>
-            <div class="video modal">
-                <a href="https://s3-eu-west-1.amazonaws.com/public-directory-api/promo-video_web.mp4" data-node="videoactivator" data-element="video" class="button video-button" target="_blank">Watch video</a>
-            </div>
-        </div>
-    </section>
-    <section class="triage triage-section">
-        <div class="container">
-            <h2 class="heading">Create your export journey</h2>
-            <img src="/public/images/home-triage-world-connections@2x.94a555a25d76.png" alt="">
-            <div class="intro">
-                <div class="content">
-                    <p>Answer a few quick questions about what you want to export and your level of experience to get:</p>
-                    <ul>
-                        <li>guidance aimed at your exporting experience level</li>
-                        <li>export statistics to start your market research</li>
-                        <li>access to services to help you export</li>
-                    </ul>
+            <div class="question ">
+                <form method="post" enctype="multipart/form-data">
+                    <div class="exred-triage-form">
 
-                    <a href="/return-journey/great-get-started" class="button button-cta">Get started</a>
+                        <legend>Question 1</legend>
 
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="personas">
-        <div class="container">
-            <h2 class="header">Export readiness</h2>
-            <p class="intro">It can be hard to know where to start if you’re new to exporting. And even if you export regularly, there’s always more to know. Get exporting guidance for your experience level.</p>
-            <div class="group">
-                <div class="lg-3 md-1">
-                    <div class="export-status-selector"><img src="/public/images/exports-hp-new-to-exporting.94fa9d4d2293.jpg" alt=""><a href="#" class="link">I'm new to exporting</a></div>
-                </div>
-                <div class="lg-3 md-1">
-                    <div class="export-status-selector"><img src="/public/images/export-hp-occasional.4e385876a339.jpg" alt=""><a href="#" class="link">I export occasionally</a></div>
-                </div>
-                <div class="lg-3 md-1">
-                    <div class="export-status-selector"><img src="/public/images/export-hp-regular.b2c06eeeead0.jpg" alt=""><a href="#" class="link"><span class="status">I’m a regular exporter</span></a></div>
-                </div>
-            </div>
-        </div>
-    </section>
+                        <input type="hidden" name="csrfmiddlewaretoken" value="GOsLYDHJA5mZBE1h0dFji3ecxhIpxlkoZXwbq8ljbbAf9JgtAnTaaoJjOvqb4ev8">
+
+                        <div class="input-field-container">
+                            <input type="hidden" name="triage_wizard_form_view-current_step" value="sector" id="id_triage_wizard_form_view-current_step">
+
+                                <p for="js-sector-select">What do you want to export?</p>
+
+                                <span>
+                                    <div class="autocomplete__wrapper" role="combobox" aria-expanded="false" style="width:600px;">
+                                        <div aria-atomic="true" aria-live="polite" role="status" style="border: 0px; clip: rect(0px 0px 0px 0px); height: 1px; margin-bottom: -1px; margin-right: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;">1 result is available. <span>,,</span></div><input aria-owns="js-sector-select__listbox" autocomplete="off" class="autocomplete__input autocomplete__input--show-all-values" id="js-sector-select" name="" placeholder="" type="text" role="textbox">
 
 
-    <section id="resource-guidance">
-        <div class="container">
-            <h2 class="section-header">Guidance</h2>
-            <p class="intro">Find information on the areas of exporting you’re dealing with as and when you need it.</p>
-            <div class="group">
-                <div class="lg-3 md-2 sm-1">
-                    <div data-component="resource-teaser" class="resources resources-teaser market-research">
-                        <a href="#" class="more"><span>Articles:</span>Market research</a>
-                        <img src="/public/images/market-research-blue.2ce2e2ff8d8b.svg" alt="" class="icon">
-                        <p class="count">
+                                    </div></span><select name="sector-sector" id="js-sector-select-select" style="display: none;">
 
-                            1/5 completed
 
-                        </p>
-                        <p class="resource-description">Research is an essential first step to selling in a new market. Making decisions based on market data will help you maximise profits and avoid costly mistakes.</p>
-                    </div>
-                </div>
-                <div class="lg-3 md-2 sm-1">
-                    <div data-component="resource-teaser" class="resources resources-teaser customer-insight">
-                        <a href="#" class="more"><span>Articles:</span>Customer insight</a>
-                        <img src="/public/images/customer-insight-blue.8f27f25999d6.svg" alt="" class="icon">
-                        <p class="count">
+                            </select>
+                            </li>
 
-                            1/4 completed
-
-                        </p>
-                        <p class="resource-description">Find out about potential customers to target them effectively. Once you have overseas customers, nurture the customer relationship with regular face-to-face meetings.</p>
-                    </div>
-                </div>
-                <div class="lg-3 md-2 sm-1">
-                    <div data-component="resource-teaser" class="resources resources-teaser finance">
-                        <a href="#" class="more"><span>Articles:</span>Finance</a>
-                        <img src="/public/images/finance-blue.6e902d33b315.svg" alt="" class="icon">
-                        <p class="count">
-
-                            0/7 completed
-
-                        </p>
-                        <p class="resource-description">Finding the right financial products for your business can give you a competitive edge in overseas markets and bridge the gap between invoicing and payment.</p>
-                    </div>
-                </div>
-                <div class="lg-3 md-2 sm-1">
-                    <div data-component="resource-teaser" class="resources resources-teaser business-planning">
-                        <a href="#" class="more"><span>Articles:</span>Business planning</a>
-                        <img src="/public/images/business-planning-blue.1e30cd5186d3.svg" alt="" class="icon">
-                        <p class="count">
-
-                            0/11 completed
-
-                        </p>
-                        <p class="resource-description">Having a well thought out export plan will make it easier to get financial support and make informed decisions on your which markets to enter and which routes to take.</p>
-                    </div>
-                </div>
-                <div class="lg-3 md-2 sm-1">
-                    <div data-component="resource-teaser" class="resources resources-teaser getting-paid">
-                        <a href="#" class="more"><span>article-list-finances:</span>Getting paid </a>
-                        <img src="/public/images/getting-paid-blue.521d0a8f3ce6.svg" alt="" class="icon">
-                        <p class="count">
-
-                            0/5 completed
-
-                        </p>
-                        <p class="resource-description">Think about what currency to invoice in, what to include on a commercial invoice and if you need to insure against non-payment.</p>
-                    </div>
-                </div>
-                <div class="lg-3 md-2 sm-1">
-                    <div data-component="resource-teaser" class="resources resources-teaser operations-and-compliance">
-                        <a href="#" class="more"><span>Articles:</span>Operations and compliance</a>
-                        <img src="/public/images/operations-and-compliance-blue.c9cecf00b3ad.svg" alt="" class="icon">
-                        <p class="count">
-
-                            0/10 completed
-
-                        </p>
-                        <p class="resource-description">How you market your website, deliver your products and protect your brand will needs consideration when your customers are overseas.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="services">
-        <div class="container">
-            <h2 class="header">Export services</h2>
-            <p class="intro">Our export services help to connect UK businesses with international buyers.</p>
-            <div class="group">
-                <div class="lg-3 md-1">
-                    <article data-component="service-teaser" class="service-teaser">
-                        <h3 class="title">Create an export profile</h3>
-                        <p class="text">Create your free trade profile and get promoted to businesses around the world.</p>
-                        <img src="/public/images/export-hp-fas-profile.d23b7aceeaae.jpg" alt=""><a href="#" class="link">Service: Find a buyer</a>
-
-                    </article>
-                </div>
-                <div class="lg-3 md-1">
-                    <article data-component="service-teaser" class="service-teaser">
-                        <h3 class="title">Find online marketplaces</h3>
-                        <p class="text">Reach over 2 billion international consumers online. Get exclusive deals negotiated by government on behalf of UK businesses.</p>
-                        <img src="/public/images/export-hp-export-opportunities.07aa7ea30491.jpg" alt=""><a href="#" class="link">Service: Find online marketplaces</a>
-                    </article>
-                </div>
-                <div class="lg-3 md-1">
-                    <article data-component="service-teaser" class="service-teaser">
-                        <h3 class="title">Find export opportunities</h3>
-                        <p class="text">Find and apply for overseas opportunities from businesses looking for products or services like yours.</p>
-                        <img src="/public/images/export-hp-online-market.bec312f30d03.jpg" alt=""><a href="#" class="link">Service: Find export opportunities</a>
-                    </article>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="carousel">
-        <div class="container">
-            <div class="container">
-                <h2 class="heading">Exporters share their story</h2>
-                <p class="intro">Read what other UK businesses have to say about their experiences with exporting and the decisions they made to secure the future of their business.</p>
-                <div class="ed-carousel-container">
-                    <div class="ed-carousel my-ed-carousel ed-carousel--translate">
-                        <input class="ed-carousel__activator" type="radio" name="ed-carousel" id="1" checked="checked">
-                        <input class="ed-carousel__activator" type="radio" name="ed-carousel" id="2">
-                        <input class="ed-carousel__activator" type="radio" name="ed-carousel" id="3">
-                        <div class="ed-carousel__controls">
-                            <label class="ed-carousel__control ed-carousel__control--backward" for="3">
-                                <span class="screen-reader-only">Go to slide 3</span>
-                            </label>
-                            <label class="ed-carousel__control ed-carousel__control--forward" for="2">
-                                <span class="screen-reader-only">Go to slide 2</span>
-                            </label>
-                        </div>
-                        <div class="ed-carousel__controls">
-                            <label class="ed-carousel__control ed-carousel__control--backward" for="1">
-                                <span class="screen-reader-only">Go to slide 1</span>
-                            </label>
-                            <label class="ed-carousel__control ed-carousel__control--forward" for="3">
-                                <span class="screen-reader-only">Go to slide 3</span>
-                            </label>
-                        </div>
-                        <div class="ed-carousel__controls">
-                            <label class="ed-carousel__control ed-carousel__control--backward" for="2">
-                                <span class="screen-reader-only">Go to slide 2</span>
-                            </label>
-                            <label class="ed-carousel__control ed-carousel__control--forward" for="1">
-                                <span class="screen-reader-only">Go to slide 1</span>
-                            </label>
-                        </div>
-                        <div class="ed-carousel__track">
-
-                            <div class="ed-carousel__slide">
-                                <div class="ed-carousel__text lg-3 md-1">
-                                    <h3>
-                                        <a href="#">
-                                            Online marketplaces propel FreestyleXtreme
-                                        </a>
-                                    </h3>
-                                    <p>Like many businesses, Bristol-based specialist sports retailer FreestyleXtreme has seen big growth through online sales overseas.</p>
-                                    <a href="#" class="carousel-cta" aria-label="Online marketplaces propel FreestyleXtreme"></a>
-                                </div>
-                                <div class="ed-carousel__slide__image lg-2 md-1" style="background-image: url(/public/images/freestylextreme.455b2bde6d69.jpg);">
-                                </div>
-                            </div>
-
-                            <div class="ed-carousel__slide">
-                                <div class="ed-carousel__text lg-3 md-1">
-                                    <h3>
-                                        <a href="#">
-                                            Hello Baby's rapid online growth
-                                        </a>
-                                    </h3>
-                                    <p>Hello Baby is an online nursery business that gets more than half its profits from exporting through online marketplaces such as Amazon, eBay and Cdiscount.</p>
-                                    <a href="#" class="carousel-cta" aria-label="Hello Baby&#39;s rapid online growth"></a>
-                                </div>
-                                <div class="ed-carousel__slide__image lg-2 md-1" style="background-image: url(/public/images/hellobaby.0732d7afb5a2.jpg);">
-                                </div>
-                            </div>
-
-                            <div class="ed-carousel__slide">
-                                <div class="ed-carousel__text lg-3 md-1">
-                                    <h3>
-                                        <a href="h#">
-                                            York bag retailer goes global via e-commerce
-                                        </a>
-                                    </h3>
-                                    <p>York-based retailer Maxwell Scott Bags was already selling internationally from its UK website when its owners made the decision to launch a German website.</p>
-                                    <a href="#" class="carousel-cta" aria-label="York bag retailer goes global via e-commerce"></a>
-                                </div>
-                                <div class="ed-carousel__slide__image lg-2 md-1" style="background-image: url(/public/images/maxwellscottbags.0b7dd72759bf.jpg);">
-                                </div>
-                            </div>
 
                         </div>
-                        <div class="ed-carousel__indicators">
-                            <label class="ed-carousel__indicator" for="1"><span class="screen-reader-only">Go to slide 1</span></label>
-                            <label class="ed-carousel__indicator" for="2"><span class="screen-reader-only">Go to slide 2</span></label>
-                            <label class="ed-carousel__indicator" for="3"><span class="screen-reader-only">Go to slide 3</span></label>
+                        <div style="margin-top: 50px;">
+                </form>
+
+
+                            <button type="submit" class="button button">Continue</button>
+
                         </div>
+
                     </div>
-                    <div style="clear: both;"></div>
-                </div>
+
+                    <div class="cf"></div>
+
+                <div class="home-link" style="margin-top:30px;">
+                    <a href="/">Back to home</a></div>
             </div>
-
         </div>
     </section>
 
-    <section id="beis" class="teaser-section">
-        <div class="container">
-            <h2 class="heading">Get support to start or grow your UK business</h2>
-            <img src="/public/images/export-hp-beis.b3d91b079979.jpg" alt="">
-            <p class="intro">
-                <span class="text">You can get government support and advice to start or grow a business within the UK. Whatever the size of your business, the Department for Business, Energy &amp; Industrial Strategy can help make it a success.</span>
-                <a href="#"Find out more on www.greatbusiness.gov.uk</a>
-            </p>
-        </div>
-    </section>
 
 </main>
 
