--- a/app/views/return-journey/great-sud-events.html
+++ b/app/views/return-journey/great-sud-events.html
@@ -3990,12 +3990,12 @@
                             <img src="/public/images/fashion-milan.jpg" style="width:150px; height:100px;">
                         </div>
                         <div>
-                            <p style="margin-bottom:10px;"><span style="font-weight:700;">Luxury is great showcase in Milan</span><br>
-                                5 December 2017 to 7 January 2018
+                            <p style="margin-bottom:10px;"><span style="font-weight:700;">DIT ‘Meet the buyer’ at Tradexpo</span><br>
+                                14 to 18 January 2018
                             </p>
                             <p class="">
                                 <a href="/event-page" style="text-decoration: underline">View event</a><br>
-                                <a href="/return-journey/signin-b2match-buyers" style="text-decoration: underline">Book meetings</a><br>
+                                <a href="https://tradeshow.b2match.io/participants#/" style="text-decoration: underline">Book meetings</a><br>
                                 <a href="/return-journey/cancel-confirm" style="text-decoration: underline">Cancel attendance</a><br>
                             </p>
                         </div>
