more link fixes

--- a/app/views/return-journey/cancel-confirm.html
+++ b/app/views/return-journey/cancel-confirm.html
@@ -1019,8 +1019,8 @@
 
 
 			<div style="margin-bottom:50px;">
-				<p style="font-weight:700; margin-bottom:10px;">Event:&nbsp;&nbsp;&nbsp; <span style="font-weight:400;">Luxury is great showcase in Milan</span> </p>
-				<p style="font-weight:700;">Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="font-weight:400;">5 December 2017 to 7 January 2018</span> </p>
+				<p style="font-weight:700; margin-bottom:10px;">Event:&nbsp;&nbsp;&nbsp; <span style="font-weight:400;">DIT ‘Meet the buyer’ at Tradexpo</span> </p>
+				<p style="font-weight:700;">Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span style="font-weight:400;">14 to 18 January 2018</span> </p>
 			</div>
 
 
