more link fixes

--- a/app/views/return-journey/eb-email.html
+++ b/app/views/return-journey/eb-email.html
@@ -197,7 +197,7 @@
 												Have a question?
 
 
-												<a href="https://www.eventbrite.com/mytickets/708184717/?contact_organizer=1" style="text-decoration:none;color:#1090ba;font-weight:normal" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://www.eventbrite.com/mytickets/708184717/?contact_organizer%3D1&amp;source=gmail&amp;ust=1513332789855000&amp;usg=AFQjCNF1RdxtearZzJlBWsBWinJD1enVOQ">Contact the organiser</a>
+												<a href="/event-page" style="text-decoration:none;color:#1090ba;font-weight:normal" target="_blank" data-saferedirecturl="https://www.google.com/url?hl=en-GB&amp;q=https://www.eventbrite.com/mytickets/708184717/?contact_organizer%3D1&amp;source=gmail&amp;ust=1513332789855000&amp;usg=AFQjCNF1RdxtearZzJlBWsBWinJD1enVOQ">Contact the organiser</a>
 
 
 
