final updates for testing

--- a/app/views/return-journey/great-home.html
+++ b/app/views/return-journey/great-home.html
@@ -953,8 +953,8 @@
                     <li><a href="/return-journey/great-home">Home</a>
                     </li>
                     <li><a href="#" id="export-readiness-links" class="list-header ExpanderControl" aria-controls="Expander_1513072894422_033378351627676905" aria-expanded="false" aria-haspopup="true" tabindex="0">Export readiness</a><div class="Expander collapsed" id="Expander_1513072894422_033378351627676905"><ul id="export-readiness-links-list" aria-labelledby="export-readiness-links" class="navigation level-2">
-                        <li class="items-3"><a href="#" tabindex="-1">I'm new to exporting</a></li>
-                        <li class="items-3"><a href="#" tabindex="-1">I export occasionally</a></li>
+                        <li class="items-3"><a href="/return-journey/great-new-exporter" tabindex="-1">I'm new to exporting</a></li>
+                        <li class="items-3"><a href="/return-journey/great-new-occasional" tabindex="-1">I export occasionally</a></li>
                         <li class="items-3"><a href="#" tabindex="-1">I'm a regular exporter</a></li>
                     </ul></div>
 
@@ -1052,13 +1052,16 @@
             <p class="intro">It can be hard to know where to start if you’re new to exporting. And even if you export regularly, there’s always more to know. Get exporting guidance for your experience level.</p>
             <div class="group">
                 <div class="lg-3 md-1">
-                    <div class="export-status-selector"><img src="/public/images/exports-hp-new-to-exporting.94fa9d4d2293.jpg" alt=""><a href="#" class="link">I'm new to exporting</a></div>
+                    <div class="export-status-selector"><img src="/public/images/exports-hp-new-to-exporting.94fa9d4d2293.jpg" alt="">
+                        <a href="/return-journey/great-new-exporter" class="link">I'm new to exporting</a></div>
                 </div>
                 <div class="lg-3 md-1">
-                    <div class="export-status-selector"><img src="/public/images/export-hp-occasional.4e385876a339.jpg" alt=""><a href="#" class="link">I export occasionally</a></div>
+                    <div class="export-status-selector"><img src="/public/images/export-hp-occasional.4e385876a339.jpg" alt="">
+                        <a href="/return-journey/great-new-occasional" class="link">I export occasionally</a></div>
                 </div>
                 <div class="lg-3 md-1">
-                    <div class="export-status-selector"><img src="/public/images/export-hp-regular.b2c06eeeead0.jpg" alt=""><a href="#" class="link"><span class="status">I’m a regular exporter</span></a></div>
+                    <div class="export-status-selector"><img src="/public/images/export-hp-regular.b2c06eeeead0.jpg" alt="">
+                        <a href="#" class="link"><span class="status">I’m a regular exporter</span></a></div>
                 </div>
             </div>
         </div>
