updates to cancel copy pages

--- a/app/views/return-journey/cancel-success.html
+++ b/app/views/return-journey/cancel-success.html
@@ -1013,11 +1013,9 @@
 
 				<div class="input-field-container" style="width:700px;">
 
-					<h2 style="font-size: 24px; font-weight: 400; line-height: 50px; margin-top:0px;margin-bottom:10px;">We've received your request to cancelled your attendance</h2>
+					<h2 style="font-size: 24px; font-weight: 400; line-height: 50px; margin-top:0px;margin-bottom:10px;">We've received your request</h2>
 
-					<p>You'll receive an email once your place has been cancelled.</p>
-
-					<p style="margin-bottom:10px;">Your place can now be given to another attendee.</p>
+					<p>The event organiser will be in touch to confirm your cancellation.</p>
 
 
 					<a class="" href="/return-journey/great-sud-events" style="border: 0;
