--- a/app/views/return-journey/cancel-confirm.html
+++ b/app/views/return-journey/cancel-confirm.html
@@ -1015,7 +1015,7 @@
 	<section id="resource-guidance" style="background-color: #fafafa; padding-top:40px;">
 		<div class="container">
 
-			<h1 style="font-size: 32px; font-weight: 400; line-height: 50px; margin-top:0px;margin-bottom:30px;">Confirmation attendance cancellation</h1>
+			<h1 style="font-size: 32px; font-weight: 400; line-height: 50px; margin-top:0px;margin-bottom:30px;">Confirm cancellation attendance</h1>
 
 
 			<div style="margin-bottom:50px;">
@@ -1026,7 +1026,7 @@
 
 			<div>
 				<p style="font-weight:700; margin-bottom:5px;">Additional details</p>
-				<p style="margin-bottom:5px;">For example: Also cancel the other people I've booked.</p>
+				<p style="margin-bottom:5px;">For example, please specify if you need to cancel more than one place</p>
 				<textarea style="width: 600px; height: 100px; min-height: 100px; margin-bottom:40px;"></textarea>
 			</div>
 
