pushing updates for round 2

--- a/app/views/return-journey/b2match-email.html
+++ b/app/views/return-journey/b2match-email.html
@@ -976,7 +976,7 @@
 				</ul>
 
 				<p>If you want to manage your general registration for this event, visit
-					<a href="/return-journey/signin-events">Your events dashboard</a> on the GREAT website
+					<a href="/return-journey/signin-events">Your events</a> dashboard on the GREAT website.
 				</p>
 
 				<p>We hope that you enjoy the event.</p>
