--- a/app/views/return-journey/cancel-confirm.html
+++ b/app/views/return-journey/cancel-confirm.html
@@ -1015,7 +1015,7 @@
 	<section id="resource-guidance" style="background-color: #fafafa; padding-top:40px;">
 		<div class="container">
 
-			<h1 style="font-size: 32px; font-weight: 400; line-height: 50px; margin-top:0px;margin-bottom:30px;">Confirm cancellation attendance</h1>
+			<h1 style="font-size: 32px; font-weight: 400; line-height: 50px; margin-top:0px;margin-bottom:30px;">Confirm cancellation</h1>
 
 
 			<div style="margin-bottom:50px;">
