--- a/app/views/return-journey/great-events.html
+++ b/app/views/return-journey/great-events.html
@@ -1068,7 +1068,7 @@
 
             <article style="width:500px;">
                 <h3>Find an event</h3>
-                <a href="#" class="great-btn" >Upcoming events</a>
+                <a href="#" class="great-btn" >All events</a>
             </article>
 
             <article style="width:300px;">
