alignedment of the registered people table

--- a/app/views/includes/registered-people-list.html
+++ b/app/views/includes/registered-people-list.html
@@ -11,9 +11,9 @@
   <td colspan="5" style="padding-top:2px;">
     <div>
       <details>
-        <summary style="display:inline">
+        <summary style="display:flex; flex-direction: row; margin-top:12px;">
             <div style="display:flex; flex-direction: row;">
-              <div style="width:190px; text-transform: none; color: #0b0c0c;">
+              <div style="width:180px; margin-left: 3px; text-transform: none; color: #0b0c0c;">
                 {{ session.registeredPeopleData1[listItemNumber][2] }}
               </div>
               <div style="width:220px; text-transform: none; color: #0b0c0c;">
